--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </title>
   </head>
   <body>
+    <img src="https://studentdrive.net/university/wu/" alt="MySchool" >
     <h2>MY Name is..</h2>
     <h2>MY Name is..</h2>
     <h2>MY Name is..</h2>
