--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="https://studentdrive.net/university/wu/" alt="MySchool" >
+    <img src="12.png" alt="MySchool" >
     <h2>MY Name is..</h2>
     <h2>MY Name is..</h2>
     <h2>MY Name is..</h2>
