--- a/index.html
+++ b/index.html
@@ -1,14 +1,152 @@
-<html>
-  <head>
-    <title>
-      My New Project 
-    </title>
-      <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <img src="12.png" alt="MySchool" >
-    <h2>MY Name is..</h2>
-    <h2>MY Name is..</h2>
-    <h2>MY Name is..</h2>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Page for placing order</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+   <div class="nav one">
+      <a class="logo" href="#">@ILIYAS-MSP
+      </a>
+      <i class='bx bx-bag'id="cart-icon" data-quantity="0">🛒</i>
+    <div class="cart">
+      <h2 class="cart-title">
+        your cart
+      </h2>
+      <div class="cart-content">
+        <div class="cart-box">
+          <img src="/images/4.jpeg" alt="cart" class="cart-img">
+          <div class="detail-box">
+            <div class="cart-product-title">
+              product solar
+            </div>
+            <div class="cart-price">
+              $50
+            </div>
+            <input type="number" name="" id="" value="1" class="cart-quantity">
+          </div>
+          <i class="cart-remove">❌</i>
+        </div>
+      </div>
+      <div class="total">
+        <div class="total-title">
+          total
+        </div>
+        <div class="total-price">$</div>
+      </div>
+      <button type="button" class="btn-pay">pay now</button>
+      <i class='bx bx-x' id="close-cart">❎</i>
+    </div>
+   </div>
+  </header>
+  <section class="shop container">
+    <h2 class="section-title">
+      shop product
+    </h2>
+    <div class="shop-content">
+      <div class="product-box">
+        <img src="/Images/7.jpeg" alt="" class="product-img">
+        <h2 class="product-title">
+          mini solar
+        </h2>
+        <span class="price">NGN 60,000</span>
+        <button class="bx bx-shipping-bag add-cart">🧺</button>
+      </div>
+      <div class="product-box">
+              <img src="/Images/4.jpeg" alt="" class="product-img">
+              <h2 class="product-title">
+                mini solar
+              </h2>
+              <span class="price">NGN 45,000</span>
+              <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+      <div class="product-box">
+                    <img src="/Images/3.jpeg" alt="" class="product-img">
+                    <h2 class="product-title">
+                      mini solar
+                    </h2>
+                    <span class="price">NGN 30,000</span>
+                    <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+      <div class="product-box">
+                          <img src="/Images/51.jpg" alt="" class="produc t-img">
+                          <h2 class="product-title">
+                            mini solar
+                          </h2>
+                          <span class="price">NGN 2,500</span>
+                          <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+      <div class="product-box">
+                                <img src="/Images/80.jpg" alt="" class="product-img">
+                                <h2 class="product-title">
+                                  mini solar
+                                </h2>
+                                <span class="price">NGN 3000</span>
+                                <i class="bx bx-shipping-bag add-cart">🧺</i>
+       </div>
+      <div class="product-box">
+                                      <img src="/Images/52.jpg" alt="" class="product-img">
+                                      <h2 class="product-title">
+                                        mini solar
+                                      </h2>
+                                      <span class="price">NGN 3000</span>
+                                      <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+      <div class="product-box">
+              <img src="/Images/57.jpg" alt="" class="product-img">
+              <h2 class="product-title">
+                mini solar
+              </h2>
+              <span class="price">NGN 3,500</span>
+              <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+      <div class="product-box">
+              <img src="/Images/Y.jpeg" alt="" class="product-img">
+              <h2 class="product-title">
+                mini solar
+              </h2>
+              <span class="price">NGN 35,000</span>
+              <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+      <div class="product-box">
+              <img src="/Images/X.jpeg" alt="" class="product-img">
+              <h2 class="product-title">
+                mini solar
+              </h2>
+              <span class="price">NGN 50,000</span>
+              <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+      <div class="product-box">
+              <img src="/Images/Z.jpeg" alt="" class="product-img">
+              <h2 class="product-title">
+                mini solar
+              </h2>
+              <span class="price">NGN 50,000</span>
+              <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+      <div class="product-box">
+              <img src="/Images/7.jpeg" alt="" class="product-img">
+              <h2 class="product-title">
+                mini solar
+              </h2>
+              <span class="price">NGN 40,000</span>
+              <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+      <div class="product-box">
+              <img src="/Images/86.jpg" alt="" class="product-img">
+              <h2 class="product-title">
+                mini solar
+              </h2>
+              <span class="price">NGN 4,500</span>
+              <i class="bx bx-shipping-bag add-cart">🧺</i>
+      </div>
+            
+    </div>
+  </section>
+  <script src="main.js"></script>
+</body>
 </html>
