--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </h2>
       <div class="cart-content">
         <div class="cart-box">
-          <img src="/images/4.jpeg" alt="cart" class="cart-img">
+          <img src="4.jpeg" alt="cart" class="cart-img">
           <div class="detail-box">
             <div class="cart-product-title">
               product solar
@@ -49,7 +49,7 @@
     </h2>
     <div class="shop-content">
       <div class="product-box">
-        <img src="/Images/7.jpeg" alt="" class="product-img">
+        <img src="7.jpeg" alt="" class="product-img">
         <h2 class="product-title">
           mini solar
         </h2>
@@ -57,7 +57,7 @@
         <button class="bx bx-shipping-bag add-cart">🧺</button>
       </div>
       <div class="product-box">
-              <img src="/Images/4.jpeg" alt="" class="product-img">
+              <img src="4.jpeg" alt="" class="product-img">
               <h2 class="product-title">
                 mini solar
               </h2>
@@ -65,7 +65,7 @@
               <i class="bx bx-shipping-bag add-cart">🧺</i>
       </div>
       <div class="product-box">
-                    <img src="/Images/3.jpeg" alt="" class="product-img">
+                    <img src="3.jpeg" alt="" class="product-img">
                     <h2 class="product-title">
                       mini solar
                     </h2>
@@ -73,7 +73,7 @@
                     <i class="bx bx-shipping-bag add-cart">🧺</i>
       </div>
       <div class="product-box">
-                          <img src="/Images/51.jpg" alt="" class="produc t-img">
+                          <img src="51.jpg" alt="" class="produc t-img">
                           <h2 class="product-title">
                             mini solar
                           </h2>
@@ -81,7 +81,7 @@
                           <i class="bx bx-shipping-bag add-cart">🧺</i>
       </div>
       <div class="product-box">
-                                <img src="/Images/80.jpg" alt="" class="product-img">
+                                <img src="80.jpg" alt="" class="product-img">
                                 <h2 class="product-title">
                                   mini solar
                                 </h2>
@@ -89,7 +89,7 @@
                                 <i class="bx bx-shipping-bag add-cart">🧺</i>
        </div>
       <div class="product-box">
-                                      <img src="/Images/52.jpg" alt="" class="product-img">
+                                      <img src="52.jpg" alt="" class="product-img">
                                       <h2 class="product-title">
                                         mini solar
                                       </h2>
@@ -97,7 +97,7 @@
                                       <i class="bx bx-shipping-bag add-cart">🧺</i>
       </div>
       <div class="product-box">
-              <img src="/Images/57.jpg" alt="" class="product-img">
+              <img src="57.jpg" alt="" class="product-img">
               <h2 class="product-title">
                 mini solar
               </h2>
@@ -105,7 +105,7 @@
               <i class="bx bx-shipping-bag add-cart">🧺</i>
       </div>
       <div class="product-box">
-              <img src="/Images/Y.jpeg" alt="" class="product-img">
+              <img src="Y.jpeg" alt="" class="product-img">
               <h2 class="product-title">
                 mini solar
               </h2>
@@ -113,7 +113,7 @@
               <i class="bx bx-shipping-bag add-cart">🧺</i>
       </div>
       <div class="product-box">
-              <img src="/Images/X.jpeg" alt="" class="product-img">
+              <img src="X.jpeg" alt="" class="product-img">
               <h2 class="product-title">
                 mini solar
               </h2>
@@ -121,7 +121,7 @@
               <i class="bx bx-shipping-bag add-cart">🧺</i>
       </div>
       <div class="product-box">
-              <img src="/Images/Z.jpeg" alt="" class="product-img">
+              <img src="Z.jpeg" alt="" class="product-img">
               <h2 class="product-title">
                 mini solar
               </h2>
@@ -129,7 +129,7 @@
               <i class="bx bx-shipping-bag add-cart">🧺</i>
       </div>
       <div class="product-box">
-              <img src="/Images/7.jpeg" alt="" class="product-img">
+              <img src="7.jpeg" alt="" class="product-img">
               <h2 class="product-title">
                 mini solar
               </h2>
@@ -137,7 +137,7 @@
               <i class="bx bx-shipping-bag add-cart">🧺</i>
       </div>
       <div class="product-box">
-              <img src="/Images/86.jpg" alt="" class="product-img">
+              <img src="86.jpg" alt="" class="product-img">
               <h2 class="product-title">
                 mini solar
               </h2>
