--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
       </div>
             
     </div>
+    <button><a href="cancel.html">cancel</button>
   </section>
   <script src="main.js"></script>
 </body>
